# PromptWise

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  LICENSE  NOTICE  READINESS_REVIEW.md  README.md  SECURITY.md  backlog.md  conftest.py  install.bat  install.ps1  install.py  install.sh  marketplace.json  plugin.json  pricing.yaml  providers.yaml  pyproject.toml  roles.yaml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.tmp.driveupload/: 429565  429567  429571  429577  429581  429585  429589  429591  429595  429599  429603  429607  429611  429615  429619  429623  429627  429629  429633  429635  429639  429643  429647  429651  429657  429659  429661  429663  429667  429671  429675  429679  429681  429683  429687  429691  429695  429699  429703  429705  (+280 more)
agents/: cost-analyst.md  governance-reviewer.md  permission-analyst.md  planner.md  reviewer.md  security-scanner.md
archive/: product_vision.rtf
commands/: agile.md  audit.md  budget.md  compliance.md  cost.md  deslop.md  doctor.md  draft-story.md  eval.md  governor.md  insights.md  learn.md  mcp-audit.md  optimize-skill.md  policy.md  portability.md  quality-gate.md  route.md  scaffold.md  security.md  shard.md  summarize.md  trace.md  tune-permissions.md  workflow.md
config/: agile.yaml  alerts.example.yaml  dashboard_auth.yaml.example  effort_map.yaml  eval_suite.json  external_models.yaml  model_strategy.yaml  models.yaml  policy.example.yaml  promptwise.yaml  promptwise_v2.yaml  promptwise_v3.yaml  reports.example.yaml  responsible_ai.yaml  role_keywords.yaml
docs/: AGILE_METHOD.md  ARCHITECTURE.md  GAP_ANALYSIS_2026-07.md  PHASE10_ROADMAP.md  PHASE11_ROADMAP.md  PHASE12_ROADMAP.md  PHASE13_ROADMAP.md  PHASE14_ROADMAP.md  PHASE15_ROADMAP.md  PHASE16_ROADMAP.md  PHASE17_ROADMAP.md  PHASE6_ROADMAP.md  PHASE7_ROADMAP.md  PHASE8_ROADMAP.md  PHASE9_ROADMAP.md  ROADMAP.md  USER_GUIDE.md  cross-agent-config-compiler-plan.html  index.html  user_guide.html
examples/: quickstart.md
hooks/: failure_capture.py  hooks.json  permissiondenied_log.py  posttooluse_audit.py  precompact_guard.py  pretooluse_bash_guard.py  pretooluse_jit_guard.py  pretooluse_secret_scan.py  promptwise-statusline.ps1  promptwise-statusline.sh  scheduled_report_check.py  sessionend_export.py  sessionstart_replay.py  stop_quality_gate.py  stop_responsible_ai.py  subagentstop_gate.py  tool_call_budget.py  (+1 more)
(+539 files in other folders)
