[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptwise"
version = "1.0.0"
description = "Cross-agent intelligence layer for AI coding agents — routing, cost, security/compliance, workflow planning, diagrams, task tracking, and 63 portable skill packs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Anil Devarasetti", email = "u2anil@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0,<3.0",
    "aiosqlite>=0.20",
    "aiohttp>=3.8",
    "flask>=2.0",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "SQLAlchemy>=2.0",
    "prometheus-client>=0.17",
    "Authlib>=1.2",
    "anthropic>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
promptwise = "promptwise.cli:main"
promptwise-server = "promptwise.server:sync_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
